Fix: adicionando UUID nos comment
